--- a/MediaPlayer/nbproject/project.properties
+++ b/MediaPlayer/nbproject/project.properties
@@ -3,8 +3,8 @@ annotation.processing.enabled.in.editor=false
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-application.title=child_window
-application.vendor=miyabetaiji
+application.title=MediaPlayer
+application.vendor=tadao
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -25,16 +25,34 @@ debug.test.classpath=\
     ${run.test.classpath}
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/child_window.jar
+dist.jar=${dist.dir}/MediaPlayer.jar
 dist.javadoc.dir=${dist.dir}/javadoc
-endorsed.classpath=\
-    ${javafx.runtime}/lib/jfxrt.jar:\
-    ${javafx.runtime}/lib/deploy.jar:\
-    ${javafx.runtime}/lib/javaws.jar:\
-    ${javafx.runtime}/lib/plugin.jar
+endorsed.classpath=
+##### ADDED BY creamy_tools #####
+##### ADDED BY creamy_tools #####
+##### ADDED BY creamy_tools #####
 excludes=
-file.reference.child_window-conf=conf
-file.reference.creamy-test=../../creamy/test
+file.reference.creamy.jar=lib/creamy.jar
+file.reference.ebean-2.7.3.jar=lib/ebean-2.7.3.jar
+file.reference.hibernate-validator-4.3.0.Final.jar=lib/hibernate-validator-4.3.0.Final.jar
+file.reference.javax.validation-1.0.0.GA.jar=lib/javax.validation-1.0.0.GA.jar
+file.reference.jsonic-1.2.11.jar=lib/jsonic-1.2.11.jar
+file.reference.persistence-api-1.0.jar=lib/persistence-api-1.0.jar
+file.reference.sqlite-jdbc-3.7.2.jar=lib/sqlite-jdbc-3.7.2.jar
+file.reference.velocity-1.7-dep.jar=lib/velocity-1.7-dep.jar
+file.reference.velocity-1.7.jar=lib/velocity-1.7.jar
+file.reference.MediaPlayer-prop=prop
+##### ADDED BY creamy_tools #####
+file.reference.ebean-2.7.3.jar=lib/ebean-2.7.3.jar
+file.reference.hibernate-validator-4.3.0.Final.jar=lib/hibernate-validator-4.3.0.Final.jar
+file.reference.javax.validation-1.0.0.GA.jar=lib/javax.validation-1.0.0.GA.jar
+file.reference.jsonic-1.2.11.jar=lib/jsonic-1.2.11.jar
+file.reference.persistence-api-1.0.jar=lib/persistence-api-1.0.jar
+file.reference.sqlite-jdbc-3.7.2.jar=lib/sqlite-jdbc-3.7.2.jar
+file.reference.velocity-1.7-dep.jar=lib/velocity-1.7-dep.jar
+file.reference.velocity-1.7.jar=lib/velocity-1.7.jar
+file.reference.MediaPlayer-prop=prop
+##### ADDED BY creamy_tools #####
 file.reference.creamy.jar=lib/creamy.jar
 file.reference.deploy.jar=/Library/Java/JavaVirtualMachines/jdk1.7.0_06.jdk/Contents/Home/jre/lib/deploy.jar
 file.reference.ebean-2.7.3.jar=lib/ebean-2.7.3.jar
@@ -46,33 +64,72 @@ file.reference.jfxrt.jar=/Library/Java/JavaVirtualMachines/jdk1.7.0_06.jdk/Conte
 file.reference.jsonic-1.2.11.jar=lib/jsonic-1.2.11.jar
 file.reference.persistence-api-1.0.jar=lib/persistence-api-1.0.jar
 file.reference.plugin.jar=/Library/Java/JavaVirtualMachines/jdk1.7.0_06.jdk/Contents/Home/jre/lib/plugin.jar
-file.reference.postgresql-9.1-902.jdbc4.jar=lib/postgresql-9.1-902.jdbc4.jar
 file.reference.sqlite-jdbc-3.7.2.jar=lib/sqlite-jdbc-3.7.2.jar
 file.reference.velocity-1.7-dep.jar=lib/velocity-1.7-dep.jar
 file.reference.velocity-1.7.jar=lib/velocity-1.7.jar
+file.reference.MediaPlayer-prop=prop
+##### ADDED BY creamy_tools #####
 includes=**
-# Non-JavaFX 2.0 jar file creation is deactivated in JavaFX 2.0 projects
+# Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
 jar.compress=false
 jar.index=${jnlp.enabled}
+##### ADDED BY creamy_tools #####
+##### ADDED BY creamy_tools #####
+##### ADDED BY creamy_tools #####
 javac.classpath=\
-    ${file.reference.child_window-conf}:\
-    ${libs.junit_4.classpath}:\
-    ${file.reference.deploy.jar}:\
-    ${file.reference.javaws.jar}:\
-    ${file.reference.jfr.jar}:\
-    ${file.reference.jfxrt.jar}:\
-    ${file.reference.plugin.jar}:\
     ${file.reference.creamy.jar}:\
     ${file.reference.ebean-2.7.3.jar}:\
     ${file.reference.hibernate-validator-4.3.0.Final.jar}:\
     ${file.reference.javax.validation-1.0.0.GA.jar}:\
     ${file.reference.jsonic-1.2.11.jar}:\
     ${file.reference.persistence-api-1.0.jar}:\
-    ${file.reference.postgresql-9.1-902.jdbc4.jar}:\
     ${file.reference.sqlite-jdbc-3.7.2.jar}:\
     ${file.reference.velocity-1.7-dep.jar}:\
-    ${file.reference.velocity-1.7.jar}
+    ${file.reference.velocity-1.7.jar}:\
+    ${file.reference.MediaPlayer-prop}:\
+    ${file.reference.deploy.jar}:\
+    ${file.reference.javaws.jar}:\
+    ${file.reference.jfr.jar}:\
+    ${file.reference.jfxrt.jar}:\
+    ${file.reference.plugin.jar}
+##### ADDED BY creamy_tools #####
+    ${file.reference.ebean-2.7.3.jar}:\
+    ${file.reference.hibernate-validator-4.3.0.Final.jar}:\
+    ${file.reference.creamy.jar}:\
+    ${file.reference.javax.validation-1.0.0.GA.jar}:\
+    ${file.reference.jsonic-1.2.11.jar}:\
+    ${file.reference.persistence-api-1.0.jar}:\
+    ${file.reference.sqlite-jdbc-3.7.2.jar}:\
+    ${file.reference.velocity-1.7-dep.jar}:\
+    ${file.reference.velocity-1.7.jar}:\
+    ${file.reference.MediaPlayer-prop}:\
+    ${file.reference.deploy.jar}:\
+    ${file.reference.javaws.jar}:\
+    ${file.reference.jfr.jar}:\
+    ${file.reference.jfxrt.jar}:\
+    ${file.reference.plugin.jar}
+##### ADDED BY creamy_tools #####
+    ${file.reference.ebean-2.7.3.jar}:\
+    ${file.reference.creamy.jar}:\
+    ${file.reference.hibernate-validator-4.3.0.Final.jar}:\
+    ${file.reference.javax.validation-1.0.0.GA.jar}:\
+    ${file.reference.jsonic-1.2.11.jar}:\
+    ${file.reference.persistence-api-1.0.jar}:\
+    ${file.reference.sqlite-jdbc-3.7.2.jar}:\
+    ${file.reference.velocity-1.7-dep.jar}:\
+    ${file.reference.velocity-1.7.jar}:\
+    ${file.reference.MediaPlayer-prop}:\
+    ${file.reference.deploy.jar}:\
+    ${file.reference.javaws.jar}:\
+    ${file.reference.jfr.jar}:\
+    ${file.reference.jfxrt.jar}:\
+    ${file.reference.plugin.jar}
+##### ADDED BY creamy_tools #####
+    ${javafx.runtime}/lib/jfxrt.jar:\
+    ${javafx.runtime}/lib/deploy.jar:\
+    ${javafx.runtime}/lib/javaws.jar:\
+    ${javafx.runtime}/lib/plugin.jar
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -82,8 +139,7 @@ javac.source=1.7
 javac.target=1.7
 javac.test.classpath=\
     ${javac.classpath}:\
-    ${build.classes.dir}:\
-    ${libs.junit_4.classpath}
+    ${build.classes.dir}
 javac.test.processorpath=\
     ${javac.test.classpath}
 javadoc.additionalparam=
@@ -102,7 +158,7 @@ javafx.deploy.adddesktopshortcut=false
 javafx.deploy.addstartmenushortcut=false
 javafx.deploy.allowoffline=true
 # If true, application update mode is set to 'background', if false, update mode is set to 'eager'
-javafx.deploy.backgroundupdate=true
+javafx.deploy.backgroundupdate=false
 javafx.deploy.embedJNLP=true
 javafx.deploy.includeDT=true
 javafx.deploy.installpermanently=false
@@ -111,7 +167,7 @@ javafx.deploy.permissionselevated=false
 javafx.enabled=true
 javafx.fallback.class=com.javafx.main.NoJavaFXFallback
 # Main class for JavaFX
-javafx.main.class=childwindow.ChildWindow
+javafx.main.class=mediaplayer.MediaPlayer
 javafx.preloader.class=
 # This project does not use Preloader
 javafx.preloader.enabled=false
@@ -119,6 +175,8 @@ javafx.preloader.jar.filename=
 javafx.preloader.jar.path=
 javafx.preloader.project.path=
 javafx.preloader.type=none
+# Set true for GlassFish only. Rebases manifest classpaths of JARs in lib dir. Not usable with signed JARs.
+javafx.rebase.libs=false
 javafx.run.height=600
 javafx.run.width=800
 javafx.runtime=${platforms.______JavaFX________.javafx.runtime.home}
@@ -127,7 +185,7 @@ javafx.signing.enabled=false
 javafx.signing.type=notsigned
 jnlp.codebase.type=no.codebase
 jnlp.descriptor=application
-# Pre-JavaFX 2.0 WebStart is deactivated in JavaFX 2.0 projects
+# Pre-JavaFX 2.0 WebStart is deactivated in JavaFX 2.0+ projects
 jnlp.enabled=false
 jnlp.mixed.code=default
 jnlp.offline-allowed=false
@@ -142,11 +200,11 @@ meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=______JavaFX________
 run.classpath=\
-    ${javac.classpath}:\
-    ${build.classes.dir}:\
-    ${dist.jar}
+    ${dist.jar}:\
+    ${javac.classpath}
 run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
 source.encoding=UTF-8
 src.dir=src
+test.src.dir=test
